[project]
name = "nanogpt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "nac-39", email = "83295760+nac-39@users.noreply.github.com" }
]
dependencies = [
    "torch>=2.4.1",
    "numpy>=2.1.1",
    "transformers>=4.45.1",
    "datasets>=3.0.1",
    "tiktoken>=0.7.0",
    "wandb>=0.18.3",
    "tqdm>=4.66.5",
    "hatchling>=1.25.0",
    "editables>=0.5",
    "wheel>=0.44.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nanogpt"]
